--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@
     /*--------------------------------------------------------------
     # Top Header
     --------------------------------------------------------------*/
-    .header {
+    .headers {
         overflow: hidden;
         background-color:transparent;;
         padding: 20px 10px;
