--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@
         margin-top:25px;
     }
     .form-group{
-        margin-bottom:1.5em;
+        margin-bottom:1.0em;
         transition:all .3s;
     }
     .form-control{
@@ -137,17 +137,20 @@
         border-color:green;
     }
     .btn{
-        background: 0 0 #fff;
+        background: 0 0 rgb(247, 0, 0);
         border:1px solid #aaa;
         border-radius:3px;
-        color:var(--font-color);
+        color:white;
         font-size:1em;
-        padding:10 50px;
+        padding:10 20px;
+        width:100%;
+        font-size:20px;
         text-transform:uppercase;
     }
     .btn:hover{
-        border-color:var(--font-hover-color);
-        color:var(--font-hover-color);
+        border-color:rgb(136, 0, 0);
+        background:rgb(160, 0, 0);
+        color:white;
     }
     .table{
         font-size: 15px;
